RESOLVED FIXED 235774
css/css-fonts/animations/font-variation-settings-composition.html has failures
https://bugs.webkit.org/show_bug.cgi?id=235774
Summary css/css-fonts/animations/font-variation-settings-composition.html has failures
Antoine Quint
Reported 2022-01-28 07:17:10 PST
css/css-fonts/animations/font-variation-settings-composition.html has 17 failures, we need to investigate and fix them.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-02-04 07:19:34 PST
Antoine Quint
Comment 2 2022-07-01 01:06:29 PDT
*** Bug 242232 has been marked as a duplicate of this bug. ***
Antoine Quint
Comment 3 2022-07-01 01:12:19 PDT
EWS
Comment 4 2022-07-01 04:47:50 PDT
Committed 252035@main (152a12cf1bfb): <https://commits.webkit.org/252035@main> Reviewed commits have been landed. Closing PR #1982 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.