css/css-fonts/animations/font-variation-settings-composition.html has failures https://bugs.webkit.org/show_bug.cgi?id=235774 <rdar://88487842>

Reviewed by Antti Koivisto.

We should only return the from and to values if we're dealing with a discrete animation, since otherwise
we could be dealing with an additive animation.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/animations/font-variation-settings-composition-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):

Canonical link: https://commits.webkit.org/252035@main